@@ -1,3 +1,7 @@
+Sat Mar 29 13:46:23 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubg.c, gtkrolls.c, gtkgame.c, dice.c: Pacify fussy compilers.
+
 Fri Mar 28 18:27:12 2003  Joern Thyssen  <jth@gnubg.org>
 
 	Read dice from file.
